# genai-hackathon-2025

./: .gitignore  Problem Statement.md  README.md  TECHNICAL_DOCUMENTATION.md  mandatory-code-instructions.md  sample_request.json
app/: __init__.py  config.py  main.py  models.py
app/api/: __init__.py
app/scoring/: explanation_agent.py  ml_model.py  network_score.py  reason_codes.py  rule_engine.py  score_engine.py  stability_scores.py  weights.json
app/training/: __init__.py  credit_training_data.csv
app/utils/: __init__.py
backend/: .env.example  .gitignore  README.md  database.py  main.py  pyproject.toml
backend/agents/: __init__.py
backend/agents/comply/: __init__.py  agent.py  aggregator_agent.py  analyzer_agent.py  retriever_agent.py  router_agent.py
backend/agents/invest/: agent.py  data_analyst.py  execution_analyst.py  prompts.py  risk_analyst.py  trading_analyst.py  visualization_analyst.py
backend/credit/: __init__.py  feature_mapper.py  ml_model.py  reason_codes.py  rule_engine.py
backend/data/: finguard.db  mock_transactions.json  more_mock_transactions.json
backend/fraud/: __init__.py  llm_analyzer.py  ml_scorer.py  rule_engine.py
backend/routers/: __init__.py  comply.py  credit.py  fraud.py  invest.py  policies.py
backend/schemas/: __init__.py  agent_outputs.py  comply.py  credit.py  fraud.py  invest.py
backend/tools/: __init__.py  yfinance_tools.py
frontend/: README.md  package-lock.json  package.json
scripts/: integration_test.py
sentinelfraud-credit-engine/: credit_training_data.csv  requirements.txt  sample data.json
(+33 files in other folders)
